--- a/style/style.css
+++ b/style/style.css
@@ -125,3 +125,48 @@ header{
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
+/* Coming Soon Section */
+
+.coming-soon{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10rem;
+}
+.text-content{
+    width: 39.3rem;
+}
+.text-content h3{
+    margin: 1.6rem 0rem;
+}
+.date{
+    width: 27.6rem;
+}
+.date p{
+    margin: 1.6rem 0rem;
+}
+.offer-title{
+    font-size: 2.4rem;
+    font-weight: 500;
+    color: red;
+}
+.soon-para{
+    font-size: 2rem;
+    color: #07021188;
+}
+.bold-date{
+    font-size: 4.8rem;
+    font-weight: 700;
+    color: red;
+}
+.date img{
+    width: 14rem;
+}
+.circular-image img{
+    width: 36.4rem;
+    border: 1.5rem solid red;
+    border-radius: 50%;
+    padding: 3rem;
+}
